--- a/src/styles/OrderStyle.css
+++ b/src/styles/OrderStyle.css
@@ -174,7 +174,8 @@ body{
 	box-shadow: -2px 2.5px 5.8px #5a5757;
 	border-radius: 10px;
 	width: 300px;
-	height: 110px;
+	/* height: 110px; */
+	max-height:135px;
 	margin: 15px;
 	border: 1px solid #f7f4f4;
   }
@@ -184,7 +185,7 @@ body{
   }
   .itemDescription{
 	display: flex;
-	padding:25px;
+	/* padding:25px; */
   }
 
   .addCart{
