--- a/src/styles/RestaurantStyle.css
+++ b/src/styles/RestaurantStyle.css
@@ -14,7 +14,7 @@
 
 #menubar{
 	display: flex;
-    justify-content: space-between;
+    /* justify-content: space-between; */
     align-items: center;
 	height: 70px;
 	width: 100%;
